--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,10 @@ div.row.cv {
     .heading-container {
         height: 35vh;
     }
+    span#coded.coded > a {
+        font-size: x-small;
+        top: 13px;
+    }
 
     #blue-part {
         height: 20vh;
